@@ -9,6 +9,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Channels facilities added
 	* Menus & toolbars reworked to be more task oriented
 	* Toolbars can now be toggled on and off via the View menu
+	* Drag 'n' drop from file managers supported for loading new layers
 	* Clicking palette numbers opens up "Edit all colours" window
 	* Paste preview now respects the palette protection mask
 	* Transform Colour Window - Hue control added
@@ -16,7 +17,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Undo now less wasteful of memory when adjusting the palette
 	* Major rewrite of back end code to improve performance
 	* Most documentation has been removed from the F1 help and is now in HTML form
-	* HTML documentation available with binary distributions or as a separate download
+	* HTML documentation available as a separate download package
 	* BUGFIX - Saving a composite layer image does not occasionally leave transparent areas
 	* BUGFIX - Transforming colour of palette with preview (RGB images) now works properly
 	* BUGFIX - Status bar now updated after removing all layers
